# RBotFirmware

./: .gitignore  AccelStepper.cpp  AccelStepper.h  AxisParams.h  CommandElem.h  CommandExtender.h  CommandInterpreter.cpp  CommandInterpreter.h  CommandQueue.h  CommandSequencer.h  CommsSerial.h  ConfigEEPROM.h  ConfigManager.h  ConfigPinMap.cpp  ConfigPinMap.h  GCodeInterpreter.h  GenResources.h  LogHandlerR.cpp  LogHandlerR.h  MotionController.h  MotionHelper.h  MotionPipeline.h  PatternEvaluator.h  PatternEvaluator_Vars.h  PatternGenerator.h  PatternGeneratorModSpiral.h  PatternGeneratorTestPattern.h  PointND.h  RBotFirmware.ino  README.md  RdDebugLevel.h  RdWebServer.cpp  RdWebServer.h  RestAPIEndpoints.h  RobotBase.h  RobotCommandArgs.h  RobotController.h  RobotGeistBot.h  RobotMugBot.h  RobotPolar.h  (+10 more)
ParticleSw/: build.bat  project.properties
PlatformIO/: .gitignore  platformio.ini
Tests/: package-lock.json
Tests/TestReactSandSim/wasm-src/: Cargo.toml
Tests/TestReactSandSim/wasm-src/src/: lib.rs  physics.rs  sand_kernel.rs  settlement.rs
Tools/: update.bat
WebUI/: .gitignore  GenResources.py  GenResourcesCNCUI.py  GenResourcesComboUI.py  GenResourcesSandTable.py
resources/: GenResources.py  TestWebServer.py
src/: CommandExtender.h  CommandInterpreter.cpp  CommandInterpreter.h  CommandQueue.h  CommandSequencer.h  CommsSerial.h  ConfigEEPROM.h  ConfigManager.h  ConfigPinMap.h  EndStop.h  GCodeInterpreter.h  GenResources.h  MotionHelper.h  MotionPipeline.h  PatternEvaluator.h  PatternEvaluator_Vars.h  PatternGenerator.h  PatternGeneratorModSpiral.h  (+19 more)
(+589 files in other folders)
