[package]
name = "sand_kernel"
version = "0.1.0"
edition = "2021"
authors = ["Rob Dobson"]
description = "High-performance sand table simulation kernel in WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

# Optional: Better panic messages in development
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Optimize for size and speed
opt-level = 3
lto = true
# Further size optimization
codegen-units = 1
